# uGLTF

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  main.cpp
.cmake/: extras.cmake
examples/: extractAnimations.cpp  gltfInfo.cpp  readWrite.cpp  scene.cpp
include/gltfpp/: gltfpp.h
include/mylib/: header.h
include/ugltf/: ugltf.h  ugltf2.h
src/: myfile.cpp
test/: CMakeLists.txt  unit-2-writeGLB.cpp  unit-Model2.cpp  unit-accessors.cpp  unit-base64.cpp  unit-buffers.cpp  unit-images.cpp  unit-main.cpp  unit-mergeBuffers.cpp  unit-modify.cpp  unit-reorder_nodes.cpp  unit-tinygltf-compare.cpp  unit-write.cpp  unit-writeGLB.cpp
